[package]
name = "entity-delegator"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"

#serde and base types
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = "0.8"
lazy_static = "1.4.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
#log lib
log = "0.4"
fast_log = "1.3"
#async runtime lib
tokio = { version = "0.2", features = ["full"] }
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
#rbatis lib(debug_mode will print json data)
rbatis = { version = "1.8", features = ["debug_mode"] }
#(not necessary)only use custom py_sql
rexpr = { version = "1.0" }
py_sql = "1.0"

warp = "0.3"